# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/nichol20/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Sumary Delete opening
+// @Description Delete a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query int true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
